# Chess

./: CMakeLists.txt  README.md  aimultithread.cpp  aimultithread.h  boardui.cpp  boardui.h  chessboard.cpp  chessboard.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
